--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^6.0.1",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "popups": "^1.1.3"
   }
 }
