--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "nodes": "14.x"
+  },
+
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
